@@ -83,8 +83,6 @@ jib {
 				'-Xlog:gc*:file=/var/log/gc.log:time,uptime,level,tags:filecount=5,filesize=100M',
 				'-XX:+HeapDumpOnOutOfMemoryError',
 				'-XX:HeapDumpPath=/var/log/heap_dump.hprof',
-				'-XX:+PrintGCDetails',
-				'-XX:+PrintGCDateStamps',
 				// 타임존 및 인코딩
 				'-Duser.timezone=Asia/Seoul',
 				'-Dfile.encoding=UTF-8',
